--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "bcrypt>=5.0.0",
     "fastapi>=0.127.0",
     "httpx>=0.28.1",
+    "mcp[cli]>=1.25.0",
+    "openai-agents>=0.6.5",
     "passlib>=1.7.4",
     "psycopg2-binary>=2.9.11",
     "pydantic-settings>=2.12.0",
