--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "react-i18next": "^16.5.0",
     "react-speech-recognition": "^4.0.1",
     "react-swipeable": "^7.0.2",
+    "recharts": "^3.6.0",
     "tsparticles": "^3.9.1",
     "tsparticles-slim": "^2.12.0",
     "workbox-webpack-plugin": "^7.4.0",
