--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,6 +59,7 @@
     "clsx": "^2.1.1",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "jsdom": "^27.4.0",
     "lucide-react": "^0.562.0",
     "postcss": "^8.5.6",
     "tailwind-merge": "^3.4.0",
