Remove exposed credentials from documentation

--- a/kubernetes/simple/secrets.yaml
+++ b/kubernetes/simple/secrets.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: todo-app
 type: Opaque
 stringData:
-  DATABASE_URL: "postgresql://neondb_owner:npg_uH9gTMsmGw6p@ep-royal-dust-ah4nrunw-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require"
-  SECRET_KEY: "d49562d5264090f969d41904fa556f695d621c4d08f36575c538ee9f6b5c70b1"
-  OPENAI_API_KEY: "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"
-  BETTER_AUTH_SECRET: "Ikns5R4zC2bdlj+83nblBOMlL+jKa9wXdVkfviQDRuQ="
+  DATABASE_URL: "postgresql://<user>:<password>@<host>/<db>?sslmode=require"
+  SECRET_KEY: "CHANGE_ME"
+  OPENAI_API_KEY: "YOUR_OPENAI_API_KEY"
+  BETTER_AUTH_SECRET: "CHANGE_ME"
