Fix vercel.json: remove comment and add valid HF Space URL

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -33,7 +33,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://your-hf-space-username.hf.space/api/:path*" // Replace with your actual Hugging Face Space URL
+      "destination": "https://awais68-todo-chatbot.hf.space/api/:path*"
     }
   ]
 }
