--- a/backend/hf_deployment/requirements_hf.txt
+++ b/backend/hf_deployment/requirements_hf.txt
@@ -38,3 +38,8 @@ tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 uvicorn==0.40.0
+dateparser>=1.3.0
+parsedatetime>=2.6
+APScheduler>=3.10.0
+pytz>=2024.1
+python-dateutil>=2.8.0
