--- a/backend/hf_deployment/todo_chatbot/requirements_hf.txt
+++ b/backend/hf_deployment/todo_chatbot/requirements_hf.txt
@@ -38,3 +38,6 @@ tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 uvicorn==0.40.0
+pytz==2024.2
+parsedatetime==2.6
+dateparser==1.2.0
